--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
+@import url("https://fonts.googleapis.com/css2?family=Alex+Brush&family=Dosis:wght@300&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bold {
+  font-size: x-large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main {
+  padding-top: 10px;
+  min-height: calc(100vh - 140px);
+  background-color: #fffffb;
+  font-family: "Dosis", sans-serif;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.herobanner {
+  width: 100%;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.welcometxt {
+  text-align: center;
+  margin: 40px 30px 0 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.form {
+  padding: 20px;
+  margin: 0 auto;
+  width: 800px;
+}
+
+.form label {
+  padding-top: 20px;
+}
+
+input {
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px auto;
+}
+
+.makers {
+  display: grid;
+  grid-template-columns: repeat(3, 30rem);
+  grid-auto-rows: auto;
+  grid-gap: 3rem;
+  min-height: 250px;
+  margin: 2rem 0 0 3rem;
+}
+
+.makersCard {
+  border: 2px solid #583a22;
+  box-shadow: 2px 2px 5px #583a22;
+  border-radius: 10px;
+  color: #0d0d0d;
+  width: 500px;
+  margin: 25px;
+}
+
+.makersCard a {
+  color: #a8611f;
+  text-decoration: none;
+  font-weight: 900;
+  display: block;
+}
+
+.makersCard a:hover {
+  font-weight: 700;
+  text-decoration: underline;
+}
+.productSpinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10rem;
+  height: 10rem;
+}
+
+.addbtn {
+  height: 45px;
+  width: 200px;
+  background-color: #583a22;
+  outline: 5px solid #583a22;
+  border: 3px solid #fff;
+  color: #fff;
+  font-family: "EB Garamond", serif;
+  margin: 20px 0 20px 0;
+  font-size: 1.2rem;
+}
+/***navigation***/
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #583a22;
+}
+
+/*******login page****/
+.hidden {
+  visibility: hidden;
+}
+.reveal {
+  visibility: visible;
+}
+
+/*********Tablet @media*********/
+@media (max-width: 899px) {
+  main {
+    padding-top: 50px;
+    min-height: calc(100vh - 190px);
+    padding-top: 20px;
+    max-width: 900px;
   }
-  to {
-    transform: rotate(360deg);
+  .herobanner img {
+    width: 900px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .welcometxt {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 500px;
+    padding-top: 100px;
+  }
+
+  .makers {
+    display: grid;
+    grid-template-columns: repeat(1, 30rem);
+    grid-auto-rows: auto;
+    grid-gap: 3rem;
+    margin-left: 10rem;
+  }
+
+  .makersCard {
+    margin-left: 0 auto;
+  }
+
+  .form {
+    width: 500px;
+  }
+}
+
+/********Mobile @media******/
+
+@media (max-width: 576px) {
+  .herobanner {
+    margin-top: 50px;
+    height: 100px;
+  }
+
+  .herobanner img {
+    max-width: 500px;
+  }
+
+  .welcometxt {
+    max-width: 300px;
+  }
+
+  .form {
+    width: 300px;
+  }
+
+  .makers {
+    margin-left: 5px;
+    width: 25rem;
+  }
+
+  .addbtn {
+    height: 35px;
+    width: 200px;
+    margin: 20px auto;
+    font-size: 1rem;
+    padding: 3px 0 3px 0;
   }
 }
