modified product card, changed font, crated CartCard.css, modified font size on front page

--- a/src/Components/ProductSingle.css
+++ b/src/Components/ProductSingle.css
@@ -32,7 +32,7 @@
     outline: 5px solid #583a22;
     border: 3px solid #fff;
     color: #fff;
-    font-family: "Dosis", sans-serif;
+    font-family: 'EB Garamond', serif;
     font-size: 1.5rem;
   }
   
@@ -42,7 +42,7 @@
     background-color: #fff;
     border: 1px solid #583a22;
     color: #583a22;
-    font-family: "Dosis", sans-serif;
+    font-family: 'EB Garamond', serif;
     font-size: 1.5rem;
     font-weight: 600;
   }
@@ -69,7 +69,7 @@
     outline: 5px solid #583a22;
     border: 3px solid #fff;
     color: #fff;
-    font-family: "Dosis", sans-serif;
+    font-family: 'EB Garamond', serif;
     font-size: 1.5rem;
   }
   
@@ -79,7 +79,7 @@
     background-color: #fff;
     border: 1px solid #583a22;
     color: #583a22;
-    font-family: "Dosis", sans-serif;
+    font-family: 'EB Garamond', serif;
     font-size: 1.5rem;
     font-weight: 600;
   }
