--- a/src/Containers/Header.css
+++ b/src/Containers/Header.css
@@ -2,7 +2,7 @@ header {
   position: relative;
   display: flex;
   height: 90px;
-  font-family: "Dosis", sans-serif;
+  font-family: "EB Garamond", serif;
   font-weight: 800;
 }
 
