--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alex+Brush&family=Dosis:wght@300&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +21,7 @@ main {
   padding-top: 10px;
   min-height: calc(100vh - 140px);
   background-color: #fffffb;
-  font-family: "Dosis", sans-serif;
+  font-family: "EB Garamond", serif;
   font-weight: 600;
 }
 
@@ -37,6 +36,7 @@ main {
 .welcometxt {
   text-align: center;
   margin: 40px 30px 0 30px;
+  font-size: 1.2rem;
 }
 
 .form {
@@ -57,7 +57,7 @@ input {
 
 .makers {
   display: grid;
-  grid-template-columns: repeat(3, 30rem);
+  grid-template-columns: repeat(2, 30rem);
   grid-auto-rows: auto;
   grid-gap: 3rem;
   min-height: 250px;
@@ -83,6 +83,7 @@ input {
 .makersCard a:hover {
   font-weight: 700;
   text-decoration: underline;
+  color: #8d521a;
 }
 .productSpinner {
   position: absolute;
