--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -3,6 +3,6 @@ footer {
   text-align: center;
   color: #0d0d0d;
   min-height: 50px;
-  font-family: "Dosis", sans-serif;
+  font-family: "EB Garamond", serif;
   font-weight: 800;
 }
