--- a/src/App.css
+++ b/src/App.css
@@ -94,15 +94,24 @@ input {
 }
 
 .addbtn {
-  height: 45px;
+  position: relative;
+  margin-top: 30px;
+  height: 40px;
   width: 200px;
-  background-color: #583a22;
-  outline: 5px solid #583a22;
-  border: 3px solid #fff;
-  color: #fff;
+  border: 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  letter-spacing: 0.2rem;
+  overflow: hidden;
+  box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
+  display: block;
+  border-radius: 15px;
+  background: #0a1943;
+  color: white;
+  font-size: 14px;
+  text-align: center;
   font-family: "EB Garamond", serif;
-  margin: 20px 0 20px 0;
-  font-size: 1.2rem;
 }
 /***navigation***/
 .dropdown-item.active,
@@ -186,10 +195,22 @@ input {
   }
 
   .addbtn {
-    height: 35px;
+    position: relative;
+    height: 40px;
     width: 200px;
-    margin: 20px auto;
-    font-size: 1rem;
-    padding: 3px 0 3px 0;
+    border: 0;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    letter-spacing: 0.2rem;
+    overflow: hidden;
+    box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
+    display: block;
+    border-radius: 15px;
+    background: #0a1943;
+    color: white;
+    font-size: 14px;
+    text-align: center;
+    font-family: "EB Garamond", serif;
   }
 }
