--- a/src/Components/ProductSingle.css
+++ b/src/Components/ProductSingle.css
@@ -1,125 +1,126 @@
 .singleProduct {
-    padding: 30px 70px;
+  padding: 30px 70px;
+}
+
+.singleProduct a {
+  color: #a8611f;
+  font-weight: 800;
+}
+
+.singleProduct img {
+  height: 100%;
+  width: 100%;
+}
+
+.singleProduct button {
+  height: 30%;
+  width: 25%;
+  float: left;
+  border: none;
+  margin: 2rem;
+  outline: 3px solid #0d0d0d;
+}
+
+.mainImage {
+  margin: 20px;
+}
+
+#buyBtn,
+#backBtn {
+  position: relative;
+  height: 40px;
+  width: 200px;
+  border: 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  letter-spacing: 0.2rem;
+  overflow: hidden;
+  box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
+  display: block;
+  border-radius: 15px;
+  background: #0a1943;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  font-family: "EB Garamond", serif;
+}
+
+#buyBtn:hover,
+#backBtn:hover {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.adminbtn:hover {
+  transform: scale(1.1);
+}
+
+.popup img {
+  max-width: 80%;
+  margin: 30px 100px;
+}
+
+.popupBtn {
+  position: relative;
+  height: 40px;
+  width: 100px;
+  margin-left: 20px;
+  border: 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  letter-spacing: 0.2rem;
+  overflow: hidden;
+  box-shadow: 0 4px 12px 0 rgba(152, 160, 180, 10);
+  display: block;
+  border-radius: 15px;
+  background: #0a1943;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  font-family: "EB Garamond", serif;
+}
+/******login page margin*****/
+.signIn {
+  margin-top: 10vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
+.modify {
+  text-decoration: none;
+}
+a.modify {
+  color: #000;
+  font-weight: 400;
+}
+
+@media (max-width: 899px) {
+  .singleProduct {
+    padding: 0px;
+    width: 900px;
   }
-  
-  .singleProduct a {
-    color: #a8611f;
-    font-weight: 800;
-  }
-  
+
   .singleProduct img {
-    height: 100%;
-    width: 100%;
+    max-width: 1000px;
+    max-height: 900px;
   }
-  
-  .singleProduct button {
-    height: 30%;
-    width: 25%;
-    float: left;
-    border: none;
-    margin: 2rem;
-    outline: 3px solid #0d0d0d;
-  }
-  
-  .mainImage {
-    margin: 20px;
-  }
-  
-  #backbtn {
-    height: 40px;
+
+  .singleProduct h1 {
     width: 200px;
-    background-color: #583a22;
-    outline: 5px solid #583a22;
-    border: 3px solid #fff;
-    color: #fff;
-    font-family: 'EB Garamond', serif;
-    font-size: 1.5rem;
+    text-align: center;
+    margin: 0 auto;
   }
-  
-  #backbtn:hover {
-    height: 40px;
+
+  .singleProduct p {
     width: 200px;
-    background-color: #fff;
-    border: 1px solid #583a22;
-    color: #583a22;
-    font-family: 'EB Garamond', serif;
-    font-size: 1.5rem;
-    font-weight: 600;
+    text-align: center;
+    margin: 0 auto;
   }
-  
-  .adminbtn:hover {
-    transform: scale(1.1);
-  }
-  
+
   .popup img {
-    max-width: 80%;
-    margin: 30px 100px;
+    max-height: 500px;
+    max-width: 400px;
   }
-  /******login page margin*****/
-  .signIn {
-    margin-top: 10vh;
-    margin-left: 10vw;
-    margin-right: 10vw;
-  }
-  #loginbtn {
-    margin-top: 3rem;
-    height: 40px;
-    width: 200px;
-    background-color: #583a22;
-    outline: 5px solid #583a22;
-    border: 3px solid #fff;
-    color: #fff;
-    font-family: 'EB Garamond', serif;
-    font-size: 1.5rem;
-  }
-  
-  #loginbtn:hover {
-    height: 40px;
-    width: 200px;
-    background-color: #fff;
-    border: 1px solid #583a22;
-    color: #583a22;
-    font-family: 'EB Garamond', serif;
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-  .modify {
-    text-decoration: none;
-  }
-  a.modify {
-    color: #000;
-    font-weight: 400;
-  }
-  
-  @media (max-width: 899px) {
-    .singleProduct {
-      padding: 0px;
-      width: 900px;
-    }
-  
-    .singleProduct img {
-      max-width: 1000px;
-      max-height: 900px;
-    }
-  
-    .singleProduct h1 {
-      width: 200px;
-      text-align: center;
-      margin: 0 auto;
-    }
-  
-    .singleProduct p {
-      width: 200px;
-      text-align: center;
-      margin: 0 auto;
-    }
-  
-    #backbtn {
-      margin: 40px;
-    }
-  
-    .popup img {
-      max-height: 500px;
-      max-width: 400px;
-    }
-  }
+}
