--- a/src/Containers/CartCard.css
+++ b/src/Containers/CartCard.css
@@ -1,22 +1,20 @@
 .cartCard {
   height: 350px;
-  width: 550px;
+  width: 700px;
   margin: 40px;
   border-radius: 7px 7px 7px 7px;
-  /* VIA CSS MATIC https://goo.gl/cIbnS */
-  -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
 }
 
 .product-image {
   float: left;
   height: 300px;
-  width: 250px;
+  width: 300px;
 }
 
 .product-image img {
   border-radius: 7px 0 0 7px;
+  width: 100%;
 }
 
 .product-info {
@@ -58,4 +56,8 @@
   color: white;
   font-size: 14px;
   text-align: center;
+}
+.removeBtn:hover {
+  transform: scale(1.1);
+  background: red;
 }
