--- a/src/Containers/Cart.css
+++ b/src/Containers/Cart.css
@@ -23,3 +23,11 @@
   margin-left: 40px;
   font-weight: 800;
 }
+
+@media (max-width: 899px) {
+  .cartBtn {
+    width: 400px;
+    height: 50px;
+    font-size: 1.3rem;
+  }
+}
