--- a/src/Containers/LoginForm.css
+++ b/src/Containers/LoginForm.css
@@ -33,6 +33,7 @@ a {
   display: flex;
   padding: 5px;
   justify-content: space-between;
+  background-color: #f8f9fa;
 }
 .login-element input {
   padding: 2px;
