--- a/src/Containers/CartCard.css
+++ b/src/Containers/CartCard.css
@@ -68,6 +68,7 @@
   text-align: center;
 }
 .removeBtn:hover {
-  transform: scale(1.1);
-  background: var(--removecolor);
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: var(--removecolor);
 }
