--- a/src/Components/ProductSingle.css
+++ b/src/Components/ProductSingle.css
@@ -12,7 +12,7 @@
 
 .singleProduct a {
   color: var(--txtcolor2);
-  font-weight: 800;
+  font-weight: normal;
 }
 
 .singleProduct img {
@@ -97,6 +97,11 @@
   font-size: 14px;
   text-align: center;
   font-family: var(--font);
+}
+
+.buttonsRow {
+  display: inline-block;
+  min-width: 780px;
 }
 /******login page margin*****/
 .signIn {
