--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,10 @@ main {
 
 .welcometxt {
   text-align: center;
-  margin: 40px 60px 0 60px;
-  font-size: 1.2rem;
+  margin: 15vh auto 5vh;
+  font-size: 1.4rem;
+  max-width: 1200px;
+  line-height: 2;
 }
 
 .form {
@@ -68,11 +70,10 @@ input {
 
 .makers {
   display: grid;
-  grid-template-columns: repeat(2, 30rem);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 3rem;
+  grid-gap: 1rem;
   min-height: 250px;
-  margin: 1rem 0 0 5rem;
 }
 
 .makersCard {
@@ -80,7 +81,6 @@ input {
   box-shadow: 2px 2px 5px var(--bordermaker);
   border-radius: 10px;
   color: var(--txtcolor);
-  width: 500px;
   margin: 25px;
 }
 
