--- a/src/Containers/CartCard.css
+++ b/src/Containers/CartCard.css
@@ -24,7 +24,8 @@
 
 .product-image img {
   border-radius: 7px 0 0 7px;
-  width: 100%;
+  width: 250px;
+  object-fit: cover;
 }
 
 .product-info {
