--- a/src/Containers/Products.css
+++ b/src/Containers/Products.css
@@ -13,14 +13,13 @@
   border-radius: 5px;
   background-color: #fafafa;
   box-shadow: 0 2px 7px #dfdfdf;
-  width: 380px;
   position: relative;
   margin: 30px auto;
   padding: 1rem;
 }
 
 .productCard img {
-  max-height: 350px;
+  height: 350px;
   width: 100%;
   border-radius: 5px;
   object-fit: cover;
@@ -77,7 +76,6 @@
 }
 
 .filteredProducts {
-  width: 1300px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
