--- a/src/Containers/SearchBox.css
+++ b/src/Containers/SearchBox.css
@@ -10,6 +10,14 @@
   margin: 20px 0 20px 0;
 }
 
+select {
+  padding-left: 0.5rem;
+}
+
+.form-control {
+  appearance: auto;
+}
+
 @media (max-width: 899px) {
   .mr-sm-2 {
     width: 500px;
